k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-app
  namespace: tasky
  labels:
    app: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      serviceAccountName: tasky-sa
      containers:
        - name: tasky
          image: 140023371320.dkr.ecr.us-east-1.amazonaws.com/tasky-app:latest
          ports:
            - containerPort: 8080
